--- a/Codewidgit/CodeWidgit/Views/Shared/_Layout.cshtml
+++ b/Codewidgit/CodeWidgit/Views/Shared/_Layout.cshtml
@@ -27,8 +27,8 @@
 
                     </div>
                     <div class="navbar-nav ms-auto">
-                        <a class="nav-item nav-link" id="signup" asp-area="" asp-controller="Home" asp-action="Sign_Up">Sign Up</a>
-                        <a class="nav-item nav-link" id="login" asp-area="" asp-controller="Home" asp-action="Log_In">Log In</a>
+                        <a class="nav-item nav-link" id="signup_btn" asp-area="" asp-controller="Home" asp-action="Sign_Up">Sign Up</a>
+                        <a class="nav-item nav-link" id="login_btn" asp-area="" asp-controller="Home" asp-action="Log_In">Log In</a>
                     </div>
                 </div>
             </div>
