--- a/Codewidgit/CodeWidgit/Views/Home/Sign_Up.cshtml
+++ b/Codewidgit/CodeWidgit/Views/Home/Sign_Up.cshtml
@@ -14,6 +14,10 @@
             </div>
             <br />
             <div class="form-group">
+                <input asp-for=Email class="form-control signup_form" id="signup_email" type="text" placeholder="Email" />
+            </div>
+            <br />
+            <div class="form-group">
                 <input asp-for=Username class="form-control signup_form" id="signup_username" type="text" placeholder="Username, e.g. 'BestCoder2022'" />
             </div>
             <br />
@@ -54,3 +58,4 @@
         <p id="already_have_an_account">Already have an Account? Login <a href="#">here</a>!</p>
     </div>
 </div>
+
