--- a/Codewidgit/CodeWidgit/Views/Shared/_Layout.cshtml
+++ b/Codewidgit/CodeWidgit/Views/Shared/_Layout.cshtml
@@ -46,6 +46,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/Sign_Up.js" asp-append-version="true"></script>
+    <script src="~/js/Log_In.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
