--- a/Codewidgit/CodeWidgit/Views/Home/Sign_Up.cshtml
+++ b/Codewidgit/CodeWidgit/Views/Home/Sign_Up.cshtml
@@ -4,7 +4,7 @@
     <img id="signup_logo" src="~/lib/Images/Images/Logo_1_Rectangle.png" />
     <h1 id="signup_title">Sign Up!</h1>
     <div id="signup_form_content">
-        <form class="form-group" id="UserForm">
+        <form class="form-group">
             <div class="form-group">
                 <input asp-for=FirstName class="form-control signup_form" id="signup_first_name" type="text" placeholder="First Name" />
             </div>
@@ -55,7 +55,7 @@
             <dd>- Find FREE Widgits from community members or verified developers</dd>
             <dd>- Engage with the community by liking, commenting, and ratting other creators Widgits</dd>
         </dl>
-        <p id="already_have_an_account">Already have an Account? Login <a href="#">here</a>!</p>
+        <p id="already_have_an_account">Already have an Account? Login <a asp-controller="Home" asp-action="Log_In">here</a>!</p>
     </div>
 </div>
 
