--- a/Codewidgit/CodeWidgit/Views/Home/Log_In.cshtml
+++ b/Codewidgit/CodeWidgit/Views/Home/Log_In.cshtml
@@ -6,11 +6,11 @@
     <div id="login_form_content">
         <form class="form-group">
             <div class="form-group">
-                <input asp-for=Email class="form-control login_form" id="login_email" type="text" placeholder="Email" />
+                <input class="form-control login_form" id="login_email" type="text" placeholder="Email" />
             </div>
             <br />
             <div class="form-group">
-                <input asp-for=Password class="form-control login_form" id="login_password" type="password" placeholder="Password" />
+                <input class="form-control login_form" id="login_password" type="password" placeholder="Password" />
             </div>
             <br />
             <div class="form-group">
