--- a/Codewidgit/CodeWidgit/Views/Home/Sign_Up.cshtml
+++ b/Codewidgit/CodeWidgit/Views/Home/Sign_Up.cshtml
@@ -6,23 +6,23 @@
     <div id="signup_form_content">
         <form class="form-group">
             <div class="form-group">
-                <input asp-for=FirstName class="form-control signup_form" id="signup_first_name" type="text" placeholder="First Name" />
+                <input class="form-control signup_form" id="signup_first_name" type="text" placeholder="First Name" />
             </div>
             <br />
             <div class="form-group">
-                <input asp-for=LastName class="form-control signup_form" id="signup_last_name" type="text" placeholder="Last Name" />
+                <input class="form-control signup_form" id="signup_last_name" type="text" placeholder="Last Name" />
             </div>
             <br />
             <div class="form-group">
-                <input asp-for=Email class="form-control signup_form" id="signup_email" type="text" placeholder="Email" />
+                <input class="form-control signup_form" id="signup_email" type="text" placeholder="Email" />
             </div>
             <br />
             <div class="form-group">
-                <input asp-for=Username class="form-control signup_form" id="signup_username" type="text" placeholder="Username, e.g. 'BestCoder2022'" />
+                <input class="form-control signup_form" id="signup_username" type="text" placeholder="Username, e.g. 'BestCoder2022'" />
             </div>
             <br />
             <div class="form-group">
-                <input asp-for=Password class="form-control signup_form" id="signup_password" type="password" placeholder="Password" />
+                <input class="form-control signup_form" id="signup_password" type="password" placeholder="Password" />
             </div>
             <br />
             <div class="form-group">
@@ -30,7 +30,7 @@
             </div>
             <br />
             <div class="form-group">
-                <input asp-for=Birthday class="form-control signup_form" id="signup_birthday" type="date" placeholder="Password" />
+                <input class="form-control signup_form" id="signup_birthday" type="date" placeholder="Password" />
             </div>
             <br />
             <div class="form-group">
