--- a/Codewidgit/CodeWidgit/Views/Users/Create.cshtml
+++ b/Codewidgit/CodeWidgit/Views/Users/Create.cshtml
@@ -28,9 +28,9 @@
                 <span asp-validation-for="Username" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
+                <label class="control-label"></label>
+                <input class="form-control" />
+                <span  class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Birthday" class="control-label"></label>
