--- a/Codewidgit/CodeWidgitCore/CodeWidgitCore/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Codewidgit/CodeWidgitCore/CodeWidgitCore/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <div class="row">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
@@ -13,7 +13,12 @@
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+                <input asp-for="Input.UserName" class="form-control" autocomplete="off" aria-required="true" />
+                <label asp-for="Input.UserName"></label>
+                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.Email" class="form-control" autocomplete="off" aria-required="true" />
                 <label asp-for="Input.Email"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
@@ -29,6 +34,14 @@
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
+        @if (ViewBag.Message != null)  
+        {  
+            <script type="text/javascript">  
+                swal("Oh No!", "@ViewBag.Message", "warning", {
+                  button: "Aww yiss!",
+                });
+            </script>  
+        }  
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
